# macro-pp

./: Blocks.hs  ExamplePython.hs  Macro.hs  MacroPython.hs  Main.hs  Parser.hs  PythonExt.hs  README.md  sample.py  stack.yaml
macro-pp/: macro-pp.cabal
macro-pp/Text/MacroPP/: Macro.hs  Parser.hs
python-pp/: Macro.hs  Main.hs  PPrinter.hs  Parser.hs  PythonPP.hs  python-pp.cabal  sample.py
python-pp/Util/: PPrinter.hs
