name:                macro-pp
version:             0.1.0.0
synopsis:            Universal macro preprocessor
homepage:            https://github.com/ziman/macpp
license:             BSD3
license-file:        LICENSE
author:              Matus Tejiscak
maintainer:          ziman@functor.sk
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <4.11
  -- hs-source-dirs:      
  default-language:    Haskell2010
