name:                macro-pp
version:             0.1.0.0
synopsis:            Universal macro preprocessor
homepage:            https://github.com/ziman/macpp
license:             BSD3
license-file:        LICENSE
author:              Matus Tejiscak
maintainer:          ziman@functor.sk
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Text.MacroPP.Macro, Text.MacroPP.Parser
  build-depends:
    base, text, parsec
  default-language:    Haskell2010
  ghc-options:
    -Wall
  default-extensions:
    OverloadedStrings
