name:                python-pp
version:             0.1.0.0
synopsis:            Python++: a macro-pp example
homepage:            https://github.com/ziman/macropp
license:             BSD3
license-file:        LICENSE
author:              Matus Tejiscak
maintainer:          ziman@functor.sk
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable python-pp
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <4.11
  -- hs-source-dirs:      
  default-language:    Haskell2010
